--- a/AmongUsModLoader/AmongUsModLoader.csproj
+++ b/AmongUsModLoader/AmongUsModLoader.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net472</TargetFramework>
         <LangVersion>8</LangVersion>
     </PropertyGroup>
 
