--- a/AmongUsModLoader/AmongUsModLoader.csproj
+++ b/AmongUsModLoader/AmongUsModLoader.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net472</TargetFramework>
-        <LangVersion>8</LangVersion>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>7.3</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <Reference Include="Assembly-CSharp">
-            <HintPath>../BepInEx/unhollowed/Assembly-CSharp.dll</HintPath>
+        <Reference Include="Assembly-CSharp-firstpass">
+            <HintPath>../BepInEx/unhollowed/Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
         <Reference Include="BepInEx">
             <HintPath>../BepInEx/core/BepInEx.Core.dll</HintPath>
