--- a/AmongUs/AmongUsModLoader.csproj
+++ b/AmongUs/AmongUsModLoader.csproj
@@ -1,62 +1,63 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net471</TargetFramework>
+        <TargetFramework>net472</TargetFramework>
         <LangVersion>7.3</LangVersion>
+        <GameDirectory>../Among Us</GameDirectory>
     </PropertyGroup>
 
     <ItemGroup>
         <Reference Include="Assembly-CSharp, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\BepInEx\unhollowed\Assembly-CSharp.dll</HintPath>
+          <HintPath>$(GameDirectory)/BepInEx/unhollowed/Assembly-CSharp.dll</HintPath>
         </Reference>
         <Reference Include="Assembly-CSharp-firstpass">
-            <HintPath>../BepInEx/unhollowed/Assembly-CSharp-firstpass.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
         <Reference Include="BepInEx">
-            <HintPath>../BepInEx/core/BepInEx.Core.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/core/BepInEx.Core.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="0Harmony">
-            <HintPath>../BepInEx/core/0Harmony.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/core/0Harmony.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="BepInEx.IL2CPP">
-            <HintPath>../BepInEx/core/BepInEx.IL2CPP.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/core/BepInEx.IL2CPP.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnhollowerBaseLib">
-            <HintPath>../BepInEx/core/UnhollowerBaseLib.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/core/UnhollowerBaseLib.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Il2Cppmscorlib">
-            <HintPath>../BepInEx/unhollowed/Il2Cppmscorlib.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/Il2Cppmscorlib.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Il2CppSystem.Core">
-            <HintPath>../BepInEx/unhollowed/Il2CppSystem.Core.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/Il2CppSystem.Core.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine">
-            <HintPath>../BepInEx/unhollowed/UnityEngine.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.CoreModule">
-            <HintPath>../BepInEx/unhollowed/UnityEngine.CoreModule.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.CoreModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.IMGUIModule">
-            <HintPath>../BepInEx/unhollowed/UnityEngine.IMGUIModule.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.IMGUIModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.PhysicsModule">
-            <HintPath>../BepInEx/unhollowed/UnityEngine.PhysicsModule.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.PhysicsModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.TextRenderingModule">
-            <HintPath>../BepInEx/unhollowed/UnityEngine.TextRenderingModule.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.TextRenderingModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.UI">
-            <HintPath>../BepInEx/unhollowed/UnityEngine.UI.dll</HintPath>
+            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.UI.dll</HintPath>
             <Private>False</Private>
         </Reference>
     </ItemGroup>
@@ -65,6 +66,6 @@
         <ItemGroup>
             <OutputFiles Include="$(OutputPath)$(AssemblyName).dll" />
         </ItemGroup>
-        <Copy SourceFiles="@(OutputFiles)" DestinationFolder="../BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
+        <Copy SourceFiles="@(OutputFiles)" DestinationFolder="$(GameDirectory)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
     </Target>
 </Project>
