--- a/AmongUs/AmongUsModLoader.csproj
+++ b/AmongUs/AmongUsModLoader.csproj
@@ -2,62 +2,58 @@
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
         <LangVersion>7.3</LangVersion>
-        <GameDirectory>../Among Us</GameDirectory>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <Reference Include="Assembly-CSharp, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
-          <HintPath>$(GameDirectory)/BepInEx/unhollowed/Assembly-CSharp.dll</HintPath>
-        </Reference>
-        <Reference Include="Assembly-CSharp-firstpass">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/Assembly-CSharp-firstpass.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/Assembly-CSharp.dll</HintPath>
         </Reference>
         <Reference Include="BepInEx">
-            <HintPath>$(GameDirectory)/BepInEx/core/BepInEx.Core.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/core/BepInEx.Core.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="0Harmony">
-            <HintPath>$(GameDirectory)/BepInEx/core/0Harmony.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/core/0Harmony.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="BepInEx.IL2CPP">
-            <HintPath>$(GameDirectory)/BepInEx/core/BepInEx.IL2CPP.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/core/BepInEx.IL2CPP.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnhollowerBaseLib">
-            <HintPath>$(GameDirectory)/BepInEx/core/UnhollowerBaseLib.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/core/UnhollowerBaseLib.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Il2Cppmscorlib">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/Il2Cppmscorlib.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/Il2Cppmscorlib.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Il2CppSystem.Core">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/Il2CppSystem.Core.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/Il2CppSystem.Core.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/UnityEngine.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.CoreModule">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.CoreModule.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/UnityEngine.CoreModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.IMGUIModule">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.IMGUIModule.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/UnityEngine.IMGUIModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.PhysicsModule">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.PhysicsModule.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/UnityEngine.PhysicsModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.TextRenderingModule">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.TextRenderingModule.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/UnityEngine.TextRenderingModule.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.UI">
-            <HintPath>$(GameDirectory)/BepInEx/unhollowed/UnityEngine.UI.dll</HintPath>
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/UnityEngine.UI.dll</HintPath>
             <Private>False</Private>
         </Reference>
     </ItemGroup>
@@ -66,6 +62,6 @@
         <ItemGroup>
             <OutputFiles Include="$(OutputPath)$(AssemblyName).dll" />
         </ItemGroup>
-        <Copy SourceFiles="@(OutputFiles)" DestinationFolder="$(GameDirectory)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
+        <Copy SourceFiles="@(OutputFiles)" DestinationFolder="$(AMONG_US_PATH)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
     </Target>
 </Project>
