--- a/AmongUs/AmongUsModLoader.csproj
+++ b/AmongUs/AmongUsModLoader.csproj
@@ -3,4 +3,10 @@
         <TargetFramework>net472</TargetFramework>
         <LangVersion>7.3</LangVersion>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <Reference Include="Assembly-CSharp, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+            <HintPath>$(AMONG_US_PATH)/BepInEx/unhollowed/Assembly-CSharp.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 </Project>
