--- a/AmongUs/AmongUs.csproj
+++ b/AmongUs/AmongUs.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
         <LangVersion>7.3</LangVersion>
+        <RootNamespace>AmongUsModLoader</RootNamespace>
     </PropertyGroup>
     
     <ItemGroup>
