--- a/AmongUs.Client.Loader/AmongUs.Client.Loader.csproj
+++ b/AmongUs.Client.Loader/AmongUs.Client.Loader.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
         <LangVersion>7.3</LangVersion>
-        <RootNamespace>ModLoaderClient</RootNamespace>
+        <RootNamespace>AmongUs.Client.Loader</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -77,7 +77,7 @@
     
     <Target Name="Copy" AfterTargets="Build">
         <ItemGroup>
-            <OutputFiles Include="$(OutputPath)AmongUsModLoader.dll" />
+            <OutputFiles Include="$(OutputPath)AmongUs.dll" />
             <OutputFiles Include="$(OutputPath)$(AssemblyName).dll" />
         </ItemGroup>
         <Copy SourceFiles="@(OutputFiles)" DestinationFolder="$(AMONG_US_PATH)BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
